--- a/electionnight/staticapp/src/scss/_sticky-nav.scss
+++ b/electionnight/staticapp/src/scss/_sticky-nav.scss
@@ -5,7 +5,7 @@
   left: 0;
   background-color: white;
   border-bottom: 1px solid #ddd;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.07), 0 3px 3px rgba(0, 0, 0, 0.07);
 
   transition: all .2s;
   top: -65px;
@@ -69,6 +69,7 @@
       text-align: center;
       background-color: #fff;
       border: 1px solid #ccc;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.10), 0 1px 2px rgba(0,0,0,0.18);
 
       transition: all .2s;
       svg{
@@ -80,7 +81,8 @@
         }
       }
       &:hover{
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        box-shadow: 0 1px 3px rgba(0,0,0,0.2), 0 1px 2px rgba(0,0,0,0.3);
+        background-color: #D3D3D3;
       }
       &:active{
         box-shadow: none;
